@startuml

title __STEP1's Class Diagram__\n

  package step1 {
    class Duck {
        + quack()
        + swim()
        + display()
        + fly()
    }
  }
  

  package step1 {
    class Main {
        {static} + main()
    }
  }
  

  package step1 {
    class MallardDuck {
        + display()
    }
  }
  

  package step1 {
    class RedHeadDuck {
        + display()
    }
  }
  

  package step1 {
    class RubberDuck {
        + display()
        + quack()
        + fly()
    }
  }
  

  MallardDuck -up-|> Duck
  RedHeadDuck -up-|> Duck
  RubberDuck -up-|> Duck


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
